# instantiate

./: CMakeLists.txt  README  instantiate.hpp
test/: CMakeLists.txt  foo.cpp  foo.hpp  lib.cpp  lib.hpp  test1.cpp
